[gd_scene load_steps=21 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/CollisionShapes/Player/PlayerCollisionDebug.tres" type="Shape2D" id=2]
[ext_resource path="res://Scenes/CollisionBoxes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Characters/Player/player.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Utils/StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Characters/Player/States/idle.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Characters/Player/States/walk.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Characters/Player/States/run.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Characters/Player/States/sneak.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Characters/Player/States/shoot.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Characters/Player/States/melee.gd" type="Script" id=11]
[ext_resource path="res://Scenes/CollisionBoxes/Hitbox.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Characters/Player/States/reload.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Characters/Player/States/swapWeapon.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Util/CharacterMover.tscn" type="PackedScene" id=15]

[sub_resource type="Animation" id=1]
resource_name = "BASE"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MeleeHitbox/Collider:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "melee"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MeleeHitbox/Collider:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponPosition:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "reload"

[sub_resource type="Animation" id=4]
resource_name = "swap_weapon"

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 25 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_mask = 66
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource( 2 )

[node name="CharacterMover" parent="." instance=ExtResource( 15 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BASE = SubResource( 1 )
anims/melee = SubResource( 2 )
anims/reload = SubResource( 3 )
anims/swap_weapon = SubResource( 4 )

[node name="WeaponPosition" type="Position2D" parent="."]
position = Vector2( 24, 24 )

[node name="CameraFollow" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="MeleeHitbox" parent="." instance=ExtResource( 12 )]
position = Vector2( 48, 0 )
collision_mask = 10
damage = 2

[node name="Collider" parent="MeleeHitbox" index="0"]
shape = SubResource( 5 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 4

[node name="Collider" parent="HurtBox" index="0"]
shape = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Sneak" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Shoot" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Melee" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Reload" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="SwapWeapon" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Melee" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/SwapWeapon" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Reload" method="_on_AnimationPlayer_animation_finished"]
[connection signal="hit" from="HurtBox" to="." method="_on_HurtBox_hit"]

[editable path="MeleeHitbox"]

[editable path="HurtBox"]
